# Concurrent

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  config.h
.github/workflows/: Concurrent.yml  test.yml
lib/: helper.cpp  helper.h  main.h
lib/Executor/: Executor.cpp  Executor.h
lib/Executor/Worker/: Slave.h  Worker.h
lib/Future/: Future.h  IFuture.cpp  IFuture.h
lib/Queue/: Queue.h
lib/Queue/Container/: Container.h
lib/Task/: ITask.cpp  ITask.h  Task.h  TimedTask.h
src/: benchmark.h  config.h  functions.cpp  functions.h  helpers.cpp  helpers.h  main.cpp  time.h
test/: main.cpp
test/lib/: executor.cpp  queue.cpp
test/src/: functions.cpp
